--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 		</dependency>
 
 
-		<!--		<dependency>
+<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
@@ -121,7 +121,7 @@
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
