--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,27 +14,38 @@ spring:
       
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/photogram
+    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
     
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update # create, update, none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
       
-  servlet:
+  servlet: 
     multipart:
       enabled: true
       max-file-size: 2MB
 
-#  security:
-#    user:
-#      name: test
-#      password: 1234   
+  security:
+    user:
+      name: test
+      password: 1234   
 
-#file:
-#  path: C:/workspace/springbootwork/upload/
+    oauth2:
+      client:
+        registration:
+          facebook:
+            client-id: 315293796826930
+            client-secret: 487af9479023b8c0e58f913b411327cf
+            scope:
+            - public_profile
+            - email
+            
+
+file:
+  path: C:/workspace/springbootwork/upload/
